<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginBottom="@dimen/x3"
        android:orientation="horizontal">


        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_tech_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technician_name"
            android:layout_weight="0"
            android:layout_marginRight="@dimen/x8"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            android:textStyle="bold"
            app:typeface="Roboto-Regular.ttf"/>

        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_tech_name_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_name"
            android:textColor="@color/gray"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>
        <ImageView
            android:id="@+id/iv_editBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="right"
            android:src="@drawable/edit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_JobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x3"
        android:orientation="horizontal">


        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_JobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:layout_marginRight="@dimen/x8"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            android:textStyle="bold"
            app:typeface="Roboto-Regular.ttf"/>

        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_JobTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_not_cooling_well"
            android:textColor="@color/gray"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_Earning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x3"
        android:orientation="horizontal">


        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_quoted"
            android:layout_marginRight="@dimen/x8"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            android:textStyle="bold"
            app:typeface="Roboto-Regular.ttf"/>

        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AED 55.00"
            android:textColor="@color/gray"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x3"
        android:orientation="horizontal">


        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_tech_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technician_number"
            android:layout_marginRight="@dimen/x4"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            android:textStyle="bold"
            app:typeface="Roboto-Regular.ttf"/>

        <com.app.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_number"
            android:textColor="@color/gray"
            android:maxLength="16"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_callUser"
            android:layout_width="0dp"
            android:layout_height="@dimen/x35"
            android:layout_weight="1"
            android:background="@drawable/button_blackbackground"
            android:layout_marginRight="@dimen/x3"
            android:textSize="@dimen/x14"
            android:textAllCaps="false"
            android:text="@string/call_technician"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancelJob"
            android:layout_width="0dp"
            android:layout_height="@dimen/x35"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/x3"
            android:background="@drawable/button_blackbackground"
            android:textSize="@dimen/x14"
            android:textAllCaps="false"
            android:text="@string/cancel_job"
            android:textColor="@color/white" />

    </LinearLayout>


    <View
        android:id="@+id/txt_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginBottom="@dimen/x3"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x20"
        android:alpha="0.6"
        android:background="@drawable/seperator"/>


</LinearLayout>