<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <LinearLayout
        android:id="@+id/ll_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x12"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginBottom="@dimen/x10"
        android:orientation="horizontal">


        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:layout_weight="0"
            android:layout_marginEnd="@dimen/x8"
            android:layout_marginStart="@dimen/x8"
            android:textColor="@color/yellow"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobNoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x12"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginBottom="@dimen/x10"
        android:orientation="horizontal">


        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_ClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_name"
            android:layout_marginEnd="@dimen/x8"
            android:layout_marginStart="@dimen/x8"
            android:textColor="@color/yellow"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_clientNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jordan Bel"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginBottom="@dimen/x20"
        android:orientation="vertical">

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="@dimen/x10"
            android:paddingTop="@dimen/x5"
            android:text="@string/select_job_type"
            android:textColor="@color/text_color"
            android:textSize="@dimen/x15"
            android:textStyle="normal"
            app:typeface="Roboto-Regular.ttf" />

        <com.ingic.yellowcap.ui.views.AnySpinner
            android:id="@+id/spn_jobtype"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:layout_marginBottom="@dimen/x5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginBottom="@dimen/x10"
            android:background="@drawable/line" />

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="@dimen/x10"
            android:paddingTop="@dimen/x10"
            android:text="@string/job_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/x15"
            android:textStyle="normal"
            app:typeface="Roboto-Regular.ttf" />

        <com.ingic.yellowcap.ui.views.AnySpinner
            android:id="@+id/spn_jobdescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:layout_marginBottom="@dimen/x5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginBottom="@dimen/x5"
            android:background="@drawable/line" />

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobselected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="@dimen/x10"
            android:paddingTop="@dimen/x10"
            android:text="@string/selected_jobs"
            android:textColor="@color/text_color"
            android:textSize="@dimen/x15"
            android:textStyle="normal"
            app:typeface="Roboto-Regular.ttf" />

     <ListView
            android:id="@+id/listView_jobselected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_jobadditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="@dimen/x10"
            android:paddingTop="@dimen/x10"
            android:text="@string/additional_job"
            android:textColor="@color/text_color"
            android:textSize="@dimen/x15"
            android:textStyle="normal"
            app:typeface="Roboto-Regular.ttf" />

        <com.ingic.yellowcap.ui.views.AnyEditTextView
            android:id="@+id/txt_additionDescription"
            style="@style/form_edttext_fields_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x100"
            android:background="@drawable/square_border"
            android:ems="10"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:gravity="top"
            android:hint="@string/addtional_job_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/x100"
            android:padding="@dimen/x10"
            android:scrollbars="vertical"
            app:typeface="Roboto-Regular.ttf" />

        <com.ingic.yellowcap.ui.views.AnyTextView
            android:id="@+id/txt_pricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="@dimen/x10"
            android:paddingTop="@dimen/x10"
            android:text="@string/pricing_for_additional_job"
            android:textColor="@color/text_color"
            android:textSize="@dimen/x15"
            android:textStyle="normal"
            app:typeface="Roboto-Regular.ttf" />

        <LinearLayout
            android:id="@+id/ll_TotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ingic.yellowcap.ui.views.AnyTextView
                android:id="@+id/txt_Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/x12"
                android:layout_marginStart="@dimen/x12"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/x15"
                app:typeface="Roboto-Regular.ttf"/>

            <RelativeLayout
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/x40"
                android:background="@drawable/square_border">

                <com.ingic.yellowcap.ui.views.AnyTextView
                    android:id="@+id/txt_totalPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/x20"
                    android:paddingRight="@dimen/x5"
                    android:text="@string/aed"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/x15"
                    app:typeface="Roboto-Regular.ttf" />

                <com.ingic.yellowcap.ui.views.AnyEditTextView
                    android:id="@+id/edt_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/txt_totalPriceText"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:maxLength="6"
                    android:hint="00"
                    android:maxLines="1"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/x15"
                    app:typeface="Roboto-Regular.ttf" />


            </RelativeLayout>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>

</ScrollView>